--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/storage": "^12.1.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "native-base": "^3.0.2",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
@@ -26,11 +27,14 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-snackbar": "^2.4.0",
+    "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
