--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "^3.4.0",
     "react-native-snackbar": "^2.4.0",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
